<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_repository">

    <fragment
            android:id="@+id/navigation_repository"
            android:name="cz.blackchameleon.trendingprojects.ui.repository.RepositoryFragment"
            android:label="@string/title_repositories"
            tools:layout="@layout/fragment_repository" />

    <fragment
            android:id="@+id/navigation_developer"
            android:name="cz.blackchameleon.trendingprojects.ui.developer.DeveloperFragment"
            android:label="@string/title_developers"
            tools:layout="@layout/fragment_developer" />

    <action
        android:id="@+id/action_repository_detail_fragment"
        app:destination="@+id/navigation_repository_detail_fragment" />

    <fragment
        android:id="@+id/navigation_repository_detail_fragment"
        android:name="cz.blackchameleon.trendingprojects.ui.repository.RepositoryDetailFragment"
        android:label="@string/title_repository_detail"
        tools:layout="@layout/fragment_repository_detail">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>