<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_padding_normal">

                <TextView
                    android:id="@+id/name"
                    style="@style/TextAppearance.MaterialComponents.Body1.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_padding_small"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:layout_constraintEnd_toStartOf="@id/avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@tools:sample/lorem/random" />

                <TextView
                    android:id="@+id/author"
                    style="@style/TextAppearance.MaterialComponents.Body1.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_small"
                    android:layout_marginEnd="@dimen/margin_padding_small"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:layout_constraintEnd_toStartOf="@id/avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    tools:text="@tools:sample/lorem/random" />


                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/avatar"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintBottom_toTopOf="@id/description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/name"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/description"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_normal"
                    android:ellipsize="end"
                    android:maxLines="5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/author"
                    tools:text="@tools:sample/lorem/random" />

                <TextView
                    android:id="@+id/forks"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_xsmall"
                    android:drawablePadding="@dimen/margin_padding_tiny"
                    android:gravity="center"
                    app:drawableStartCompat="@drawable/ic_fork"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    tools:text="@tools:sample/date/day_of_week" />

                <TextView
                    android:id="@+id/overall_stars"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_normal"
                    android:layout_marginTop="@dimen/margin_padding_xsmall"
                    android:drawablePadding="@dimen/margin_padding_tiny"
                    android:gravity="center"
                    app:drawableStartCompat="@drawable/ic_star"
                    app:layout_constraintStart_toEndOf="@id/forks"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    tools:text="@tools:sample/date/day_of_week" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toStartOf="@id/language_color"
                    app:layout_constraintStart_toEndOf="@id/overall_stars"
                    app:layout_constraintTop_toBottomOf="@id/description" />

                <TextView
                    android:id="@+id/language_color"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginEnd="@dimen/margin_padding_tiny"
                    android:background="@drawable/solid_circle"
                    android:contentDescription="@string/language_color"
                    app:layout_constraintBottom_toBottomOf="@id/language"
                    app:layout_constraintEnd_toStartOf="@id/language"
                    app:layout_constraintTop_toTopOf="@id/language" />

                <TextView
                    android:id="@+id/language"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_xsmall"
                    android:layout_marginEnd="@dimen/margin_padding_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/contributors_title"
                    style="@style/TextAppearance.MaterialComponents.Body1.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_normal"
                    android:text="@string/contributors"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/forks" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/contributor_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contributors_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/no_data_text"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_data_found"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/overlay"
        layout="@layout/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>